@@ -68,6 +68,9 @@ namespace amcp {
 		void SetThumbGenerator(const std::shared_ptr<core::thumbnail_generator>& thumb_gen) {thumb_gen_ = thumb_gen;}
 		std::shared_ptr<core::thumbnail_generator> GetThumbGenerator() { return thumb_gen_; }
 
+		void SetShutdownServerNow(boost::promise<bool>& shutdown_server_now) {shutdown_server_now_ = &shutdown_server_now;}
+		boost::promise<bool>& GetShutdownServerNow() { return *shutdown_server_now_; }
+
 		void SetChannelIndex(unsigned int channelIndex){channelIndex_ = channelIndex;}
 		unsigned int GetChannelIndex(){return channelIndex_;}
 
@@ -97,6 +100,7 @@ namespace amcp {
 		std::shared_ptr<core::video_channel> pChannel_;
 		std::vector<safe_ptr<core::video_channel>> channels_;
 		std::shared_ptr<core::thumbnail_generator> thumb_gen_;
+		boost::promise<bool>* shutdown_server_now_;
 		AMCPCommandScheduling scheduling_;
 		std::wstring replyString_;
 	};
